Colab을 통해 생성됨

--- a/ESAA_YB_1108_assignmnet.ipynb
+++ b/ESAA_YB_1108_assignmnet.ipynb
@@ -75,18 +75,12 @@
       "cell_type": "markdown",
       "source": [
         "## [02] 단순 선형 회귀를 통한 회귀 이해\n",
-        "단순 선형 회귀 : 독립변수도 하나, 종속변수도 하나인 선형 회귀\n",
-        "- 잔차(남은 오류) : 실제 값과 회귀 모델의 차이에 따른 오류 값\n",
-        "\n",
-        "최적의 회귀 모델 만들기 : 잔차 합이 최소가 되는 모델 만들기, 오류 값 합이 최소가 되도록 하는 최적의 회귀 계수 찾기\n",
         "\n",
         "오류 합 계산 방식\n",
         "- 절댓값 취해서 더하기\n",
         "- 오류 값의 제곱을 더하는 방식 (RSS)\n",
         "- RSS : 비용\n",
-        "- W 변수(회귀 계수)로 구성되는 RSS : 비용함수(손실함수 Loss Function)\n",
-        "\n",
-        "머신러닝 회귀 알고리즘 : 데이터를 계속 학습하면서 이 비용 함수가 반환하는 값 (오류 값)을 지속해서 감소 -> 최종적으로는 더 이상 감소하지 않는 최소의 오류 값 구함"
+        "- W 변수(회귀 계수)로 구성되는 RSS : 비용함수(손실함수 Loss Function)"
       ],
       "metadata": {
         "id": "RkmE0qMblt9L"
@@ -208,15 +202,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "- gradient_descent_steps() : get_weight_updates()을 경사 하강 방식으로 반복적으로 수행하여 w1과 w0을 업데이트"
-      ],
-      "metadata": {
-        "id": "lfhzB90o2En1"
-      }
     },
     {
       "cell_type": "code",
@@ -396,19 +381,6 @@
       ],
       "metadata": {
         "id": "G12_HwAJ8BXn"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "다중 공산성 (multi-collinearity) 문제\n",
-        "- Ordinary Least Squares 기반의 회귀 계수 계산은 입력 피처의 독릭성에 많은 영향을 받음\n",
-        "- 피처 간 상관관계가 높은 경우 분산이 매우 커져서 오류에 매우 민감해짐\n",
-        "- 상관관계가 높은 피처가 많은 경우 : 독립적인 주요한 피첨나 남기고 제거하거나 규제를 적용\n",
-        "- 매우 많은 피처가 다중 공산성 문제를 가지는 경우 : PCA 를 통해 차원 축소를 수행"
-      ],
-      "metadata": {
-        "id": "YbfsoZqy9tpM"
       }
     },
     {
@@ -1058,18 +1030,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "5개의 폴드 세트에서 cross_val_score() 이용 : 교차검증으로 MSE, RMSE 측정\n",
-        "- cross_val_score()의 인자로 scoring = 'neg_mean_squared_error' 지정 : 반환하는 수치 값이 음수 값\n",
-        "- 반환된 값에 -1을 다시 곱해야 양의 값인 원래 모델에서 계산된 MSE 값을 구할 수 있음\n",
-        "- RMSE 는 MSE 수치로 직접 변환하여 구하기 (MSE 값에 넘파이의 sqrt() 함수 적용)\n"
-      ],
-      "metadata": {
-        "id": "WZQNdNKGFXgy"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "from sklearn.model_selection import cross_val_score\n",
@@ -1111,25 +1071,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## [05] 다항회귀와 과(대)적합/과소적합 이해\n",
-        "\n",
-        "*   다항 회귀 : 회귀가 2차, 3차 방정식과 같은 다항식으로 표현되는 것"
+        "## [05] 다항회귀와 과(대)적합/과소적합 이해"
       ],
       "metadata": {
         "id": "eJw-txVcmrAX"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "비선형 함수를 선형 모델에 적용시키는 방법을 사용해 구현 (다항 회귀 역시 선형 회귀이므로)\n",
-        "\n",
-        "** 사이킷런은 다항 회귀를 위한 클래스를 제공하지 않음\n",
-        "\n",
-        "- PolynomialFeatures 클래스 통해 피처를 Polynominal(다항식) 피처로 변환"
-      ],
-      "metadata": {
-        "id": "55M6oYW5H9es"
       }
     },
     {
@@ -1287,18 +1232,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "### [다항 회귀를 이용한 과소적합 및 과적합 이해]\n",
-        "- 다항 회귀는 피처의 직선적 관계가 아닌 복잡한 다항 관계를 모델링\n",
-        "- 다항식의 차수가 높아질수록 매우 복잡한 피처 간의 관계까지 모델링 가능\n",
-        "- 다항 회귀의 차수가 높아질수록 학습 데이터에 대한 과적합 문제 발생, 예측력 감소"
-      ],
-      "metadata": {
-        "id": "hCtsB2gLNQHp"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# 다항 회귀를 이용해 과소적합과 과적합의 문제를 잘 보여주는 예제\n",
@@ -1414,14 +1347,14 @@
         "### [편향-분산 트레이드오프]\n",
         "\n",
         "- 고편향성/고분산성\n",
-        " - 고편향성 : 앞의 Degree 1과 같은 모델은 매우 단순화된 모델, 지나치게 한 방향성으로 치우친 경향\n",
-        " - 고분산성 : Degree 15와 같은 모델은 학습 데이터 하나 하나의 특성을 반영하면서 매우 복잡한 모델, 지나치게 높은 변동성\n",
+        " - 고편향성 : 지나치게 한 방향성으로 치우친 경향\n",
+        " - 고분산성 : 매우 복잡한 모델에서 자주 나타남, 지나치게 높은 변동성\n",
         "\n",
         "- 편향과 분산은 한쪽이 높으면 한쪽이 낮아지는 경향\n",
         " - 편향이 높으면 분산은 낮아지고 (과소적합)\n",
         " - 편향이 낮으면 분산이 높음 (과적합)\n",
         "\n",
-        "- 편향이 너무 높으면 전체 오류가 높고, 편향을 점점 낮추면 동시에 분산이 높아지고 전체 오류도 낮아짐\n",
+        "- 편향이 너무 높으면 전체 오류 높고, 편향을 점점 낮추면 동시에 분산이 높아지고 전체 오류도 낮아짐\n",
         "- 편향과 분산이 서로  트레이드 오프를 이루면서 오류 Cost 값이 최대로 낮아지는 모델 구축하기"
       ],
       "metadata": {
